update graylog image

--- a/graylog-helm-chart/values.yaml
+++ b/graylog-helm-chart/values.yaml
@@ -3,6 +3,8 @@ graylog:
     install-elasticsearch: false
     install-mongodb: false
   graylog:
+    image:
+      tag: "4.2.5"
     input:
       udp:
         service:
