--- a/graylog-helm-chart/values.yaml
+++ b/graylog-helm-chart/values.yaml
@@ -3,6 +3,7 @@ graylog:
     install-elasticsearch: false
     install-mongodb: false
   graylog:
+    rootTimezone: "UTC+1"
     image:
       tag: "4.2.5"
     input:
